--- a/www/src/styles/index.css
+++ b/www/src/styles/index.css
@@ -1,3 +1,96 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  behavior: smooth;
+}
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+body,
+input,
+textarea,
+button {
+  font: 400 1rem Roboto, sans-serif;
+}
+
+@layer components {
+  .quick-links {
+    @apply w-56 h-24 rounded-lg border border-red-500 flex items-center justify-center gap-4 flex-row-reverse;
+  }
+  .icon {
+    @apply flex-shrink-0 h-6 w-6;
+  }
+  /* sidebar */
+  .sidebar {
+    @apply px-4 py-8 flex flex-col justify-between w-16 lg:w-[220px];
+  }
+  .sidebar-title {
+    @apply text-sm md:text-2xl font-bold text-center;
+  }
+  .sidebar-link {
+    @apply flex items-center justify-center gap-3 hover:text-white/80 transition-colors duration-300;
+  }
+  .sidebar-text {
+    @apply h-0 w-0 invisible lg:visible lg:h-full lg:w-full font-medium;
+  }
+  .input-clean {
+    @apply border-none outline-0 focus:ring-0;
+  }
+  .input {
+    @apply text-black  border border-zinc-200 w-full shadow-sm h-12 px-3 rounded;
+  }
+  .bg-color-hover {
+    @apply bg-secondary/70 text-white hover:bg-secondary transition-all duration-300;
+  }
+  .flexCenter {
+    @apply flex items-center justify-center;
+  }
+  .flexCol {
+    @apply flex flex-col;
+  }
+  .flexColReverse {
+    @apply flex flex-col-reverse;
+  }
+  .flexRow {
+    @apply flex flex-row;
+  }
+  .flexRowReverse {
+    @apply flex flex-row-reverse;
+  }
+  .bg-gradient-custom {
+  }
+  .radius-base {
+    @apply rounded-lg;
+  }
+  .btn {
+    @apply px-4 py-3 rounded-lg cursor-pointer shadow-lg hover:shadow-none;
+  }
+  .th {
+    @apply p-2 text-left bg-slate-300 text-base leading-relaxed first:rounded-tl-lg last:rounded-tr-lg;
+  }
+  .td {
+    @apply bg-white/70 border-t-4 text-sm p-2 leading-relaxed first:pl-4 last:pr-4;
+  }
+}
+
+/*
+    https://github.com/tailwindlabs/tailwindcss/discussions/2394
+    https://github.com/tailwindlabs/tailwindcss/pull/5732
+*/
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
