--- a/www/src/styles/index.css
+++ b/www/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,7 +8,8 @@
   --primary-color: #f59e0b;
   --secondary-color: #8f1dde;
   --title-color: #322153;
-  --text-color: #6c6c80;
+  --text-color: #494d4b;
+
   /* 
   primary: ,
   : "#",
@@ -39,12 +40,66 @@ body,
 input,
 textarea,
 button {
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 @layer components {
-  .page-home {
-    @apply min-h-screen;
+  .quick-links {
+    @apply w-56 h-24 rounded-lg border border-red-500 flex items-center justify-center gap-4 flex-row-reverse;
+  }
+  .icon {
+    @apply flex-shrink-0 h-6 w-6;
+  }
+  /* sidebar */
+  .sidebar {
+    @apply bg-[#9164FA] px-4 py-8 flex flex-col justify-between w-16 lg:w-[220px];
+  }
+  .sidebar-title {
+    @apply text-sm md:text-2xl font-bold text-center text-[#494D4B];
+  }
+  .sidebar-link {
+    @apply flex items-center justify-center text-zinc-300 gap-3 hover:text-white transition-colors duration-300;
+  }
+  .sidebar-text {
+    @apply h-0 w-0 invisible lg:visible lg:h-full lg:w-full font-medium;
+  }
+  .input-clean {
+    @apply border-none outline-0 focus:ring-0;
+  }
+  .input {
+    @apply text-black  border border-zinc-200 w-full shadow-sm h-12 px-3 rounded;
+  }
+  .bg-color-hover {
+    @apply bg-secondary/70 text-white hover:bg-secondary transition-all duration-300;
+  }
+  .flexCenter {
+    @apply flex items-center justify-center;
+  }
+  .flexCol {
+    @apply flex flex-col;
+  }
+  .flexColReverse {
+    @apply flex flex-col-reverse;
+  }
+  .flexRow {
+    @apply flex flex-row;
+  }
+  .flexRowReverse {
+    @apply flex flex-row-reverse;
+  }
+  .bg-gradient-custom {
+  }
+  .radius-base {
+    @apply rounded-lg;
+  }
+  .btn {
+    @apply px-4 py-3 rounded-lg cursor-pointer shadow-lg hover:shadow-none;
+  }
+  .th {
+    @apply p-2 text-left bg-slate-300 text-base leading-relaxed first:rounded-tl-lg last:rounded-tr-lg;
+  }
+  .td {
+    @apply bg-white/70 border-t-4 text-sm p-2 leading-relaxed first:pl-4 last:pr-4;
   }
 }
 
