feat: crud com firebase

--- a/www/src/styles/index.css
+++ b/www/src/styles/index.css
@@ -72,6 +72,9 @@ button {
   .bg-solid {
     background-color: #fef5e7;
   }
+  .bg-solid-alt {
+    background-color: #9164fa;
+  }
   .bg-hover {
     @apply bg-secondary/70 text-white hover:bg-secondary transition-all duration-300;
   }
@@ -96,9 +99,7 @@ button {
   }
 
   /* sidebar */
-  .sidebar {
-    @apply h-screen w-16 p-8 flex flex-col bg-[#9164FA] lg:w-[220px];
-  }
+
   .sidebar-title {
     @apply text-sm md:text-2xl font-bold text-center;
     /* text-[#494D4B] */
@@ -116,6 +117,12 @@ button {
   }
   .td {
     @apply bg-white border-t-4 text-sm p-2 leading-relaxed first:pl-4 last:pr-4;
+  }
+  .td-cancelado {
+    @apply td bg-gray-300 cursor-not-allowed;
+  }
+  .td-concluido {
+    @apply td text-success font-bold;
   }
   .subtitle {
     @apply text-xl font-bold leading-relaxed;
