--- a/www/src/styles/index.css
+++ b/www/src/styles/index.css
@@ -22,6 +22,10 @@ button {
 }
 
 @layer components {
+  .grid-flow-container {
+    @apply grid gap-4 w-full grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
+  }
+
   .flex-center {
     @apply flex justify-center items-center;
   }
