--- a/www/src/components/CardActivity/CardActivity.module.scss
+++ b/www/src/components/CardActivity/CardActivity.module.scss
@@ -1,6 +1,6 @@
 .card {
   background: none;
-  border-radius: 6px;
+  border-radius: 4px;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
   &:hover {
@@ -14,7 +14,7 @@
     }
   }
   .containerImage {
-    padding-top: 56.25%;
+    padding-top: 57%;
     border-radius: 3px;
     background-size: 100%;
     background-position: center;
@@ -35,23 +35,29 @@
 
     .category {
       padding: 5px 5px 0;
-      // color: #707070;
-      font-size: 10px;
+      font-size: 12px;
+      font-weight: 600;
+      width: 100%;
+      text-transform: capitalize;
+      display: flex;
+      justify-content: space-between;
+
+      --tw-text-opacity: 1;
+      color: rgb(245 158 11 / var(--tw-text-opacity));
       text-transform: capitalize;
     }
 
     .title {
       color: #60489d;
-      font-size: 16px;
-      margin: 0;
-      padding: 5px;
+      font-size: 20px;
+      margin-top: 12px;
     }
 
     .text {
       font-size: 14px;
       padding: 5px;
       display: -webkit-box;
-      -webkit-line-clamp: 7;
+      -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
